# pitertools

./: README.md  pyproject.toml
pitertools/: __init__.py  map_async.py  map_executor.py  map_parallel.py  map_theaded.py  map_threaded.py
tests/: test_parallel_map.py
