[tool.poetry]
name = "pitertools"
version = "0.5.0"
description = ""
authors = ["tsah <tsah.weiss@gmail.com>"]
readme = "README.md"
repository = "https://github.com/tsah/pitertools"

[tool.poetry.dependencies]
python=">=3.8.0,<3.12.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.9.0"
pytest = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
