[project]
name = "pitertools"
version = "0.7.0"
description = ""
authors = [{name = "tsah", email = "tsah.weiss@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8.0"

[project.optional-dependencies]
dev = [
    "ipython>=8.9.0",
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
